Show the password dialog on all desktops, thereby avoiding a blocking dialog on another desktop.  Seems to be the best solution according to the bug report dialogue.

BUG: 91940

svn path=/trunk/kdelibs/; revision=360856